Fix jumpHighlightComment

--- a/packages/commonwealth/client/styles/index.scss
+++ b/packages/commonwealth/client/styles/index.scss
@@ -8,7 +8,8 @@
 html,
 body {
   box-sizing: border-box;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   width: 100%;
 }
 
